--- Auto-Git Commit ---

--- a/agenda1/pubspec.yaml
+++ b/agenda1/pubspec.yaml
@@ -1,4 +1,4 @@
-name: agenda
+name: agenda1
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -24,7 +24,6 @@ dependencies:
   flutter:
     sdk: flutter
   timetable: ^0.2.6
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
