--- a/agenda1/pubspec.yaml
+++ b/agenda1/pubspec.yaml
@@ -23,8 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  timetable: ^0.2.6
-
+  date_util: ^0.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
@@ -45,9 +44,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - packages/time_machine/data/cultures/cultures.bin
-    - packages/time_machine/data/tzdb/tzdb.bin
+  # assets:
+  #   - packages/time_machine/data/cultures/cultures.bin
+  #   - packages/time_machine/data/tzdb/tzdb.bin
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
