--- a/agenda1/pubspec.yaml
+++ b/agenda1/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  syncfusion_flutter_calendar: ^18.2.46
+  # syncfusion_flutter_calendar: ^18.2.46
+  indexed_list_view: ^1.0.9
 dev_dependencies:
   flutter_test:
     sdk: flutter
