--- a/agenda1/pubspec.yaml
+++ b/agenda1/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   # syncfusion_flutter_calendar: ^18.2.46
   indexed_list_view: ^1.0.9
+  provider: ^4.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
